--- a/buildtools/wasm/package.json
+++ b/buildtools/wasm/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "build": "mkdir -p dist && esbuild --external:std --bundle prettier.ts --format=esm | node hoist-imports.mjs > dist/prettier.js",
+    "build": "mkdir -p dist && esbuild --external:os --external:std --bundle prettier.ts --format=esm | node hoist-imports.mjs > dist/prettier.js",
     "format": "biome check --apply ."
   },
   "keywords": [],
@@ -15,6 +15,7 @@
     "@biomejs/biome": "^1.7.3",
     "@types/quickjs": "github:Gottox/quickjs-dts",
     "esbuild": "^0.21.4",
+    "mvdan-sh": "^0.10.1",
     "prettier": "3.3.1",
     "typescript": "^5.3.3"
   }
