--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,29 +10,5 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          - macos-13
-          - macos-14
-          - ubuntu-22.04
-          - windows-2022
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-go@v5
-        with:
-          go-version-file: go.work
-          cache-dependency-path: "**/go.sum"
-
-      - run: go run ./build lint
-        if: ${{ startsWith(matrix.os, 'ubuntu-') }}
-
-      - name: run tests
-        run: go run build test
-
-      - name: build snapshot
-        if: startsWith(matrix.os, 'ubuntu-')
-        run: go run build snapshot
+    uses: wasilibs/actions/.github/workflows/ci.yaml@f7543d6818fa449e7ea36b5c841ce3bb3f885370
+    secrets: inherit
