Migrate to bun and wasi-sdk 25

--- a/buildtools/wasm/Dockerfile
+++ b/buildtools/wasm/Dockerfile
@@ -1,18 +1,15 @@
-FROM node:20-bookworm AS buildjs
+FROM oven/bun:1-alpine AS buildjs
 
 WORKDIR /app
 
-RUN corepack enable
-
-COPY buildtools/wasm/package.json buildtools/wasm/pnpm-lock.yaml ./
-RUN pnpm install --frozen-lockfile
-COPY buildtools/wasm/*.mjs ./
+COPY buildtools/wasm/package.json buildtools/wasm/bun.lock ./
+RUN bun install --frozen-lockfile --production
 COPY buildtools/wasm/*.ts ./
 COPY buildtools/wasm/sh/ ./sh
 COPY buildtools/wasm/tsconfig.json ./
-RUN pnpm run build
+RUN bun run build
 
-FROM ghcr.io/webassembly/wasi-sdk:wasi-sdk-22
+FROM ghcr.io/webassembly/wasi-sdk:wasi-sdk-25
 
 RUN apt-get update && apt-get install -y binaryen curl patch xz-utils
 
@@ -23,14 +20,14 @@ RUN make install
 RUN make clean
 COPY buildtools/wasm/patch-quickjs.txt ./
 RUN patch -p1 < patch-quickjs.txt
-ENV CUSTOM_CFLAGS $CFLAGS -DEMSCRIPTEN -D_WASI_EMULATED_SIGNAL
+ENV CUSTOM_CFLAGS $CFLAGS -O3 -DEMSCRIPTEN -D_WASI_EMULATED_SIGNAL
 RUN make libquickjs.a
 RUN $RANLIB libquickjs.a
 
 WORKDIR /app
 COPY --from=buildjs /app/dist/prettier.js ./
 RUN qjsc -e prettier.js -o prettier.c
-RUN $CC $CFLAGS -O2 -o prettier-noopt.wasm prettier.c -lquickjs -I/usr/local/include/quickjs -L/quickjs -Wl,--global-base=1024 -Wl,-lwasi-emulated-signal
+RUN $CC $CFLAGS -O3 -o prettier-noopt.wasm prettier.c -lquickjs -I/usr/local/include/quickjs -L/quickjs -Wl,--global-base=1024 -Wl,-lwasi-emulated-signal
 RUN wasm-opt -o prettier.wasm --low-memory-unused --flatten --rereloop --converge -O3 prettier-noopt.wasm
 
 CMD [ "cp", "prettier.wasm", "/out"]
