--- a/buildtools/wasm/Dockerfile
+++ b/buildtools/wasm/Dockerfile
@@ -1,4 +1,21 @@
-FROM oven/bun:1-alpine AS buildjs
+FROM ghcr.io/webassembly/wasi-sdk:wasi-sdk-27 AS qjs
+
+RUN apt-get update && apt-get install -y curl
+
+WORKDIR /quickjs
+
+RUN curl -L https://github.com/quickjs-ng/quickjs/archive/76b3b124000886de9422a82e4f9524ec30dc36f0.tar.gz | tar -xz --strip-components=1 -C /quickjs
+ENV CMAKE_TOOLCHAIN_FILE=/opt/wasi-sdk/share/cmake/wasi-sdk.cmake
+RUN cmake -B build -DCMAKE_BUILD_TYPE=Release && cmake --build build --target qjs_exe
+
+FROM oven/bun:1
+
+RUN apt-get update && apt-get install -y build-essential binaryen cmake curl
+
+WORKDIR /quickjs
+
+RUN curl -L https://github.com/quickjs-ng/quickjs/archive/76b3b124000886de9422a82e4f9524ec30dc36f0.tar.gz | tar -xz --strip-components=1 -C /quickjs
+RUN cmake -B build -DCMAKE_BUILD_TYPE=Release && cmake --build build --target qjs_exe
 
 WORKDIR /app
 
@@ -10,25 +27,11 @@ COPY buildtools/wasm/sh/ ./sh
 COPY buildtools/wasm/tsconfig.json ./
 RUN bun run build
 
-FROM ghcr.io/webassembly/wasi-sdk:wasi-sdk-25
-
-RUN apt-get update && apt-get install -y binaryen curl patch xz-utils
-
 WORKDIR /quickjs
-RUN curl -L https://github.com/bellard/quickjs/archive/f25e5d4094a11cf098670417e8a16ffb7cbadda0.tar.gz | tar -xz --strip-components=1 -C /quickjs
-RUN make
-RUN make install
-RUN make clean
-COPY buildtools/wasm/patch-quickjs.txt ./
-RUN patch -p1 < patch-quickjs.txt
-ENV CUSTOM_CFLAGS $CFLAGS -O3 -DEMSCRIPTEN -D_WASI_EMULATED_SIGNAL
-RUN make libquickjs.a
-RUN $RANLIB libquickjs.a
 
-WORKDIR /app
-COPY --from=buildjs /app/dist/prettier.js ./
-RUN qjsc -e prettier.js -o prettier.c
-RUN $CC $CFLAGS -O3 -o prettier-noopt.wasm prettier.c -lquickjs -I/usr/local/include/quickjs -L/quickjs -Wl,--global-base=1024 -Wl,-lwasi-emulated-signal
-RUN wasm-opt -o prettier.wasm --low-memory-unused --flatten --rereloop --converge -O3 prettier-noopt.wasm
+COPY --from=qjs /quickjs/build/qjs ./qjs-wasm
+RUN build/qjs -c /app/dist/prettier.js -o prettier.wasm --exe ./qjs-wasm
+
+#RUN wasm-opt -o prettier.wasm --low-memory-unused --flatten --rereloop --converge -O3 prettier-noopt.wasm
 
 CMD [ "cp", "prettier.wasm", "/out"]
